--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.11.2",
-    "@react-navigation/native": "^5.7.6",
-    "@react-navigation/stack": "^5.9.3",
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
-    "react": "^16.14.0",
-    "react-dom": "16.13.1",
-    "react-native": "^0.63.3",
-    "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "^1.8.0",
-    "react-native-reanimated": "^1.13.1",
-    "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.11.0",
-    "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.2",
-    "react-navigation-props-mapper": "2",
-    "react-navigation-stack": "^2.8.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.6"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject"
+    },
+    "dependencies": {
+        "@expo/vector-icons": "^10.0.0",
+        "@react-native-community/masked-view": "^0.1.10",
+        "@react-navigation/drawer": "^5.9.0",
+        "@react-navigation/native": "^5.7.3",
+        "@react-navigation/stack": "^5.9.3",
+        "expo": "~39.0.2",
+        "expo-status-bar": "~1.0.2",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-native": "0.63.2",
+        "react-native-elements": "*",
+        "react-native-gesture-handler": "~1.7.0",
+        "react-native-paper": "^4.0.1",
+        "react-native-reanimated": "^1.13.1",
+        "react-native-safe-area-context": "3.1.4",
+        "react-native-screens": "~2.10.1",
+        "react-native-vector-icons": "^7.1.0",
+        "react-native-web": "~0.13.12",
+        "react-navigation": "^4.4.2",
+        "react-navigation-drawer": "^2.6.0",
+        "react-navigation-props-mapper": "2",
+        "react-navigation-stack": "^2.8.4"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.9.6"
+    },
+    "private": true
 }
