--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
         "react-navigation": "^4.4.2",
         "react-navigation-drawer": "^2.6.0",
         "react-navigation-props-mapper": "2",
-        "react-navigation-stack": "^2.8.4"
+        "react-navigation-stack": "^2.8.4",
+        "react-redux": "5.0.7",
+        "redux": "^4.0.0",
+        "redux-logger": "3.0.6",
+        "redux-thunk": "2.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6"
