--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
         "@react-navigation/drawer": "^5.9.0",
         "@react-navigation/native": "^5.7.3",
         "@react-navigation/stack": "^5.9.3",
-        "expo": "~39.0.2",
-        "expo-status-bar": "~1.0.2",
+        "expo": "^39.0.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
-        "react-native": "0.63.2",
+        "react-native": "^0.63.3",
         "react-native-elements": "*",
         "react-native-gesture-handler": "~1.7.0",
         "react-native-paper": "^4.0.1",
         "react-native-reanimated": "^1.13.1",
-        "react-native-safe-area-context": "3.1.4",
+        "react-native-safe-area-context": "0.6.0",
         "react-native-screens": "~2.10.1",
         "react-native-vector-icons": "^7.1.0",
         "react-native-web": "~0.13.12",
@@ -31,6 +30,7 @@
         "react-navigation-props-mapper": "2",
         "react-navigation-stack": "^2.8.4",
         "react-redux": "5.0.7",
+        "react-redux-form": "^1.16.14",
         "redux": "^4.0.0",
         "redux-logger": "3.0.6",
         "redux-thunk": "2.2.0"
